# megamek-multi-server

./: .envrc  .gitignore  README.md  app.py  auth.py  flake.nix  main.py  pwd_file.py  pyproject.toml  quart-auth.nix  server.py  utils.nix
app/: __main__.py  orchestrator.py  server.py  server_config.py
nix/: default.nix  utils.nix
nix/python/: default.nix
nix/setups/: 0_49_19.nix  0_49_20.nix  0_50_03.nix  0_50_06.nix  utils.nix
old/: __main__.py  auth.py
python/: default.nix
secrets/: passwords.txt
servers/: 0_49.nix  0_50.nix
servers/game-options/Nacional-Megamek/: gameoptions.xml
servers/game-options/jordi/: gameoptions.xml
setups/: 0_49.nix  0_49_19.nix  0_49_20.nix  0_50.nix  0_50_06.nix  utils.nix
src/megamek-multi-server/: __init__.py  __main__.py  auth.py  pwd_file.py
src/megamek-multi-server/servers/: __init__.py  commands.py  conductor.py  event.py  events.py  extension.py  server.py
src/megamek-multi-server/templates/: index.html  login.html
src/megamek_multi_server/: __init__.py  __main__.py  auth.py  pwd_file.py
src/megamek_multi_server/logic/: __init__.py  auth.py  commands.py  conductor.py  config.py  events.py  extension.py  server.py  server_description.py  server_info.py
src/megamek_multi_server/servers/: __init__.py  commands.py  conductor.py  events.py  extension.py  server.py  server_config.py  server_description.py  server_info.py
src/megamek_multi_server/static/: coms.mjs  utils.mjs
src/megamek_multi_server/templates/: admin.html  index.html  (+1 more)
src/secrets/: passwords.txt
templates/: index.html  login.html
(+5 files in other folders)
