[project]
name = "megamech-multi-server"
version = "0.1.0"
description = "Manage MegaMek server with a web interface"
authors = [
    {name="Martí Angelats i Ribera"}
]
readme = "README.md"
license = "AGPL-3.0-only"
dependencies = [
    "quart >= 0.20",
    "quart-auth >= 0.11.0",
    "Hypercorn >= 0.17.3",
    "pydantic >= 2.11",
    "aiofiles >= 24.1.0",
    "aioshutil >= 1.5",
]
requires-python = ">=3.13"

[project.urls]


[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
order_by_type = false
reverse_relative = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"